Added metadata map to DbMediaItem
