# backend/src/main/kotlin/dev/dres/api/rest/types/collection/ApiMediaItemMetaDataEntry.kt
@@ -1,0 +1,3 @@
+package dev.dres.api.rest.types.collection
+
+data class ApiMediaItemMetaDataEntry(val key: String, val value: String)
